force-app/main/default/objects/Lead/fields/Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Status__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Prospect Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AM Sourced</fullName>
            </value>
            <value>
                <fullName>Bad Data</fullName>
                <color>#0B24BE</color>
                <label>Bad Data</label>
            </value>
            <value>
                <fullName>Competitor</fullName>
                <color>#419249</color>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <color>#A53711</color>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
                <color>#78C953</color>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Event Sourced</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified</fullName>
                <color>#E27001</color>
                <label>Marketing Qualified</label>
            </value>
            <value>
                <fullName>Marketing Qualified Lead (MQL)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Passive MQL</fullName>
            </value>
            <value>
                <fullName>PGi</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
                <color>#66E9BD</color>
                <label>Recycle</label>
            </value>
            <value>
                <fullName>Sales Accepted</fullName>
                <color>#A845DC</color>
                <label>Sales Accepted</label>
            </value>
            <value>
                <fullName>Sales Qualified</fullName>
                <color>#F3D904</color>
                <label>Sales Qualified</label>
            </value>
            <value>
                <fullName>Sales Sourced</fullName>
            </value>
            <value>
                <fullName>ToFu</fullName>
                <color>#0B6FCE</color>
                <label>ToFu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>