force-app/main/default/objects/Lead/fields/Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID__c</fullName>
    <description>Used to determine Round Robin for the SMB team, each new user add 1 to the first number, subtract one for any reps leaving the team.</description>
    <formula>MOD(VALUE(Lead_Number__c) ,5) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z-Round Robin ID (SMB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>