force-app/main/default/objects/Lead/fields/RR_Initial_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>RR_Initial_Product_of_Interest__c</fullName>
    <label>RR Initial Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>