force-app/main/default/objects/Lead/fields/RT_Inactive_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>RT_Inactive_Lead_Owner__c</fullName>
    <label>RT Inactive Lead Owner</label>
    <length>99</length>
    <type>Text</type>
</CustomField>