force-app/main/default/objects/Lead/fields/RT_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Lead_Type__c</fullName>
    <label>RT Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>