force-app/main/default/objects/Lead/fields/Sales_Ops_Generated_Leads__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Generated_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Ops Generated Leads</label>
    <type>Checkbox</type>
</CustomField>