force-app/main/default/objects/Lead/fields/saleswings__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Full_Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>