force-app/main/default/objects/Lead/fields/saleswings__Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Lead_Status__c</fullName>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>