force-app/main/default/objects/Lead/fields/saleswings__SalesWings_Status__c.field-meta.xml
<CustomField>
    <fullName>saleswings__SalesWings_Status__c</fullName>
    <formula>saleswings__Favorite_Icon__c &amp; &quot; &quot; &amp; saleswings__Current_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SW SalesWings Status</label>
    <type>Text</type>
</CustomField>