force-app/main/default/objects/Lead/fields/saleswings__SICCode__c.field-meta.xml
<CustomField>
    <fullName>saleswings__SICCode__c</fullName>
    <label>SIC Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>