force-app/main/default/objects/Lead/fields/saleswings__Temperature_Order__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Temperature_Order__c</fullName>
    <label>SW Temperature order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>