force-app/main/default/objects/Lead/fields/SFDC_Acct_ID_2__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Acct_ID_2__c</fullName>
    <formula>Account__r.SFDC_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC Acct ID (2)</label>
    <type>Text</type>
</CustomField>