force-app/main/default/objects/Lead/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <formula>Owner:User.Manager_Copy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&#39;s Manager</label>
    <type>Text</type>
</CustomField>