force-app/main/default/objects/Lead/fields/Terms_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_Consent_Date__c</fullName>
    <label>Terms Consent Date</label>
    <type>Date</type>
</CustomField>