force-app/main/default/objects/Lead/fields/Terms_Consent_URL__c.field-meta.xml
<CustomField>
    <fullName>Terms_Consent_URL__c</fullName>
    <label>Terms Consent URL</label>
    <type>Url</type>
</CustomField>