force-app/main/default/objects/Lead/fields/TESLA_IntlCompanyID__c.field-meta.xml
<CustomField>
    <fullName>TESLA_IntlCompanyID__c</fullName>
    <label>TESLA_IntlCompanyID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>