force-app/main/default/objects/Lead/fields/To_be_Deleted__c.field-meta.xml
<CustomField>
    <fullName>To_be_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be Deleted</label>
    <type>Checkbox</type>
</CustomField>