force-app/main/default/objects/Lead/fields/totango__Totango_Account_Health_Icon__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_Account_Health_Icon__c</fullName>
    <formula>IMAGE( CASE(  totango__Totango_Account_Health__c , &quot;Good&quot;, &apos;https://app.totango.com/images/health/circle-green.png&apos;, &quot;Average&quot;, &apos;https://app.totango.com/images/health/circle-yellow.png&apos;, &quot;Poor&quot;, &apos;https://app.totango.com/images/health/circle-red.png&apos;,  &apos;&apos;), &quot;&quot;,15,15)</formula>
    <label>Totango Account Health Icon</label>
    <type>Text</type>
</CustomField>