force-app/main/default/objects/Lead/fields/totango__Totango_Health_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_Health_Profile_Name__c</fullName>
    <label>Totango_Health_Profile_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>