force-app/main/default/objects/Lead/fields/totango__Totango_isOnline__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_isOnline__c</fullName>
    <defaultValue>&quot;https://app.totango.com/images/emptyPixel.png&quot;</defaultValue>
    <description>Indicates whether customer is currently using your service</description>
    <label>Totango Online Status</label>
    <type>Url</type>
</CustomField>