force-app/main/default/objects/Lead/fields/totango__Totango_Usage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_Usage_Frequency__c</fullName>
    <label>Totango Usage Frequency</label>
    <length>32</length>
    <type>Text</type>
</CustomField>