force-app/main/default/objects/Lead/fields/totango__TotangoOnlineStatusImage__c.field-meta.xml
<CustomField>
    <fullName>totango__TotangoOnlineStatusImage__c</fullName>
    <formula>IF( CONTAINS( totango__Totango_isOnline__c , &quot;totango&quot;), IMAGE( totango__Totango_isOnline__c, &quot;N/A&quot;) ,  IMAGE(&quot;https://app.totango.com/images/emptyPixel.png&quot;,&quot;N/A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totango Online Status Icon</label>
    <type>Text</type>
</CustomField>