force-app/main/default/objects/Lead/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <description>Trail users</description>
    <label>Trial Start Date</label>
    <type>DateTime</type>
</CustomField>