force-app/main/default/objects/Lead/fields/voipAllowed__c.field-meta.xml
<CustomField>
    <fullName>voipAllowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>VoIP Allowed</label>
    <type>Checkbox</type>
</CustomField>