force-app/main/default/objects/Lead/fields/Webcast_Webinar_Contact_Grade__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Webinar_Contact_Grade__c</fullName>
    <label>Webcast/Webinar Contact Grade</label>
    <length>18</length>
    <type>Text</type>
</CustomField>