force-app/main/default/objects/Lead/fields/Webinar__c.field-meta.xml
<CustomField>
    <fullName>Webinar__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Email Subscription</description>
    <label>Webinar</label>
    <type>Checkbox</type>
</CustomField>