force-app/main/default/objects/Lead/fields/Webinar_Package_Additional_Participants__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Package_Additional_Participants__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>Amount charged for every additional 100 participants added.</inlineHelpText>
    <label>Webinar Package Additional Participants</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>