force-app/main/default/objects/Lead/fields/Webinar_Set_Up_Customization__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Set_Up_Customization__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Webinar Set-Up &amp; Customization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>