force-app/main/default/objects/Lead/fields/z_m_Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>z_m_Annual_Revenue_Range__c</fullName>
    <label>Annual Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Micro (US$0-$5m)</fullName>
            </value>
            <value>
                <fullName>Small (US$6-$10m)</fullName>
            </value>
            <value>
                <fullName>Medium (US$11-$100m)</fullName>
            </value>
            <value>
                <fullName>Large (US$101-$999m)</fullName>
            </value>
            <value>
                <fullName>Very Large (&gt;US$1000m)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>