force-app/main/default/objects/Lead/fields/z_Round_Robin_EMEA_Direct_Sales_UK__c.field-meta.xml
<CustomField>
    <fullName>z_Round_Robin_EMEA_Direct_Sales_UK__c</fullName>
    <description>When Lead: Owner Region EQUALS EMEA_Direct_Sales_UK
I need the lead to go into the following round robin:
0 goes to Aaron O&apos;Neill
1 goes to Farrukh Nasiri
2 goes to Shaun Choo
3 goes to Bissa Kembetia
4 goes to Stephane Guiblin</description>
    <formula>MOD(VALUE(Lead_Number__c) ,5) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Round Robin for EMEA_Direct_Sales_UK</inlineHelpText>
    <label>z-Round Robin EMEA Direct Sales UK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>