force-app/main/default/objects/Lead/fields/Zendesk__Last_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Last_Sync_Status__c</fullName>
    <label>Last Sync Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>