force-app/main/default/objects/Lead/fields/ZoomInfo_Country__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Country__c</fullName>
    <description>COD-1443, Case 881654: Create new field to fix ZoomInfo Pro Tool Integration. Field also created on the Account object.</description>
    <label>ZoomInfo Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>