force-app/main/default/objects/Lead/recordTypes/PGi_Leads.recordType-meta.xml
<RecordType>
    <fullName>PGi_Leads</fullName>
    <active>true</active>
    <businessProcess>PGi Leads Process</businessProcess>
    <label>PGi Leads</label>
</RecordType>