force-app/main/default/objects/Lead/validationRules/ALL_Special_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Special_Characters</fullName>
    <active>true</active>
    <description>Certain fields should not contain special characters otherwise they can not be properly vetted and cleaned by Data.com Clean</description>
    <errorConditionFormula>AND( 
$User.Alias &lt;&gt; &quot;autocln&quot;, 
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
$User.Override_Validation_Rules__c = False,
 $User.Id &lt;&gt; &quot;0051300000C418v&quot;,
OR( 
CONTAINS(FirstName , &#39;/&#39;), 
CONTAINS(FirstName , &#39;\\&#39;), 
CONTAINS(FirstName , &#39;;&#39;), 
CONTAINS(FirstName , &#39;|&#39;), 
CONTAINS(FirstName , &#39;:&#39;), 
CONTAINS(LastName, &#39;/&#39;), 
CONTAINS(LastName, &#39;\\&#39;), 
CONTAINS(LastName, &#39;;&#39;), 
CONTAINS(LastName, &#39;|&#39;), 
CONTAINS(LastName, &#39;:&#39;), 
CONTAINS(Phone, &#39;/&#39;), 
CONTAINS(Phone, &#39;\\&#39;), 
CONTAINS(Phone, &#39;;&#39;), 
CONTAINS(Phone, &#39;|&#39;), 
CONTAINS(Phone, &#39;:&#39;), 
CONTAINS(City, &#39;/&#39;), 
CONTAINS(City, &#39;\\&#39;), 
CONTAINS(City, &#39;;&#39;), 
CONTAINS(City, &#39;|&#39;), 
CONTAINS(City, &#39;:&#39;), 
CONTAINS(Email, &#39;/&#39;), 
CONTAINS(Email, &#39;\\&#39;), 
CONTAINS(Email, &#39;;&#39;), 
CONTAINS(Email, &#39;|&#39;), 
CONTAINS(Email, &#39;:&#39;), 
CONTAINS(Company, &#39;\\&#39;), 
CONTAINS(Company, &#39;;&#39;), 
CONTAINS(Company, &#39;|&#39;), 
CONTAINS(Company, &#39;:&#39;) 
))</errorConditionFormula>
    <errorMessage>Lead Name, Company, Phone, Email, and City cannot contain the following special characters: / | \ ; :</errorMessage>
</ValidationRule>