force-app/main/default/objects/Lead/validationRules/Lead_Source_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Alias &lt;&gt; &quot;autocln&quot;,
CONTAINS(RecordType.Name, &quot;PGi&quot;), 
$User.Override_Validation_Rules__c = False,
$User.Profile_Name_Text__c &lt;&gt; &quot;PGi Marketing User&quot;,
NOT($Setup.BypassRules__c.Disable_Validation_Rules__c),
ISPICKVAL( LeadSource, &quot;Other&quot;),
ISBLANK( Lead_Source_Details__c ) )</errorConditionFormula>
    <errorDisplayField>Lead_Source_Details__c</errorDisplayField>
    <errorMessage>Additional details are required when &quot;Other&quot; is selected as Lead Source.</errorMessage>
</ValidationRule>