force-app/main/default/objects/Lead/validationRules/PGi_Cant_Convert_Without_Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_Cant_Convert_Without_Account_Type</fullName>
    <active>true</active>
    <description>Can&#39;t convert lead if Account Type isn&#39;t filled out</description>
    <errorConditionFormula>AND( 
$User.Alias &lt;&gt; &quot;autocln&quot;, 
CONTAINS(RecordType.Name, &quot;PGi&quot;), 
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
$User.Override_Validation_Rules__c = False, 
IsConverted = True, 
ISBLANK(TEXT(Account_Type__c))
)</errorConditionFormula>
    <errorDisplayField>Account_Type__c</errorDisplayField>
    <errorMessage>You must select an &quot;Account Type&quot; before you&#39;re able to convert this lead.</errorMessage>
</ValidationRule>