force-app/main/default/objects/Lead/validationRules/PGi_Cant_Qualify_Without_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_Cant_Qualify_Without_Address</fullName>
    <active>false</active>
    <description>Requires leads to have an Address (Street, City, State, Zip, Country, Phone and Email) to be populated before the status can be set to Qualifying. Update: COD-1445, If Lead Source equals &#39;ZoomInfo&#39;, then Country not required.</description>
    <errorConditionFormula>AND( 
$User.Alias &lt;&gt; &quot;autocln&quot;, 
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
CONTAINS(RecordType.Name, &quot;PGi&quot;), 
$User.Override_Validation_Rules__c = False, 
ISPICKVAL(Status, &quot;Qualifying&quot;), 
NOT(ISPICKVAL(LeadSource, &quot;ZoomInfo&quot;)),
OR(
ISBLANK(PostalCode),
ISBLANK(Country),
ISBLANK(City),
ISBLANK(Street),
ISBLANK(Phone),
ISBLANK(Email)),
NOT($Setup.BypassRules__c.Disable_Validation_Rules__c) 
)</errorConditionFormula>
    <errorMessage>Street, City, State, Postal Code, Country, Phone and Email fields are all required in order to set the Lead Status to Qualifying.</errorMessage>
</ValidationRule>