force-app/main/default/objects/Lead/validationRules/PGi_Cant_Qualify_Without_Department.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_Cant_Qualify_Without_Department</fullName>
    <active>false</active>
    <description>Requires leads to have the Department field populated before the status can be set to Qualifying</description>
    <errorConditionFormula>AND(
$User.Alias &lt;&gt; &quot;autocln&quot;,
CONTAINS(RecordType.Name, &quot;PGi&quot;), 
ISPICKVAL(Status, &quot;Qualifying&quot;),
$User.Override_Validation_Rules__c = False,
NOT($Setup.BypassRules__c.Disable_Validation_Rules__c),
OR(ISPICKVAL( Department__c , &quot;Unknown&quot;),
 ISBLANK(TEXT(Department__c))
))</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>The Department can&apos;t be &quot;Unknown&quot; or blank to save the lead with a Status as Qualifying.</errorMessage>
</ValidationRule>